CREACION DE VISTA PARA LOGIN
Creando la vista para el login, añadiendo el scss y html que se utilizara para las modificaciones.

--- a/src/scss/base/_tipografia.scss
+++ b/src/scss/base/_tipografia.scss
@@ -22,3 +22,15 @@ p {
     color: v.$blanco;
     font-size: 2rem;
 }
+
+// ---- NUEVO CSS PARA LAS PAGINAS ----
+
+.nombre-pagina{
+    text-align: center;
+    margin: 5rem 0;
+    font-weight: v.$bold;
+}
+
+.descripcion-pagina{
+    text-align: center;
+}
