--- a/src/scss/base/_mixins.scss
+++ b/src/scss/base/_mixins.scss
@@ -6,46 +6,47 @@
         @content;
     }
 }
+
 @mixin tablet {
     @media (min-width: v.$tablet) {
         @content;
     }
 }
+
 @mixin desktop {
     @media (min-width: v.$desktop) {
         @content;
     }
 }
 
-
+/** Mixins para Componentes **/
 @mixin boton($bgColor, $colorTexto) {
     background-color: $bgColor;
-    padding: 1.5rem 4rem;
     color: $colorTexto;
-    margin-top: 2rem;
+    padding: 1.5rem 4rem;
     font-size: 2rem;
-    font-weight: 400;
-    display: inline-block;
-    font-weight: 700;
+    font-weight: 700; // Se unifica el font-weight y se elimina la declaración duplicada
     border: none;
-    transition-property: background-color;
-    transition-duration: .3s;
     text-align: center;
+    transition: background-color .3s; // Simplificación de las propiedades de transición
     display: block;
     width: 100%;
     margin: 5rem 0;
 
     @include tablet {
-        width: auto;
+        display: inline-block; // Cambio para especificidad en tabletas
+        width: auto; // Tamaño auto para adaptabilidad
+        margin: 2rem; // Ajuste de márgenes para consistencia
     }
+
     &:hover {
-        background-color: darken( $bgColor, 10% );
+        background-color: darken($bgColor, 10%);
         cursor: pointer;
     }
 }
 
-@mixin grid($columnas, $espaciado ) {
+@mixin grid($columnas, $espaciado) {
     display: grid;
     gap: $espaciado;
-    grid-template-columns: repeat($columnas, 1fr);
+    grid-template-columns: repeat($columnas, 1fr); // Implementación efectiva para crear un sistema de grillas flexible
 }
