--- a/src/scss/base/_variables.scss
+++ b/src/scss/base/_variables.scss
@@ -1,24 +1,26 @@
-// Fuentes
-$fuente_principal: 'Poppins', sans-serif;
-
-// Tamaño de Media Queries
-$telefono: 480px;
-$tablet: 768px;
-$desktop: 1024px;
-
-// Colores
+// Colores existentes
 $azul: #0da6f3;
 $rojo: #cb0000;
-$verde:#329f00;
+$verde: #329f00;
 $negro: #1a1b15;
-
 $blanco: #FFFFFF;
 $gris: #e1e1e1;
 
+// Nuevos colores
+$azul-claro: #7ec8e3;
+$rojo-claro: #ff6a6a; 
+$verde-claro: #76b947; 
+$amarillo: #fcd116; 
+$gris-oscuro: #505050;  
+$gris-claro: #f0f0f0; 
+$naranja: #ff9800; 
+$purpura: #9c27b0; 
+
+// Distancias y fuentes
 $separacion: 5rem;
 
 // Fuentes
 $delgada: 300;
-$regular : 400;
+$regular: 400;
 $bold: 700;
-$black: 900
+$black: 900;
