--- a/src/scss/layout/_servicios.scss
+++ b/src/scss/layout/_servicios.scss
@@ -1,75 +1,43 @@
 @use 'base/variables' as v;
 @use 'base/mixins' as m;
 
-.listado-servicios {
-    display: grid;
-    gap: 2rem;
-    @include m.tablet {
-        @include m.grid(2, 2rem);
-    }
-
-    .servicio {
-        background-color: v.$blanco;
-        padding: 3rem;
-        border-radius: 1rem;
-        transition-property: transform;
-        transition-duration: 300ms;
-        text-align: center;
-
-        &.seleccionado {
-            background-color: v.$azul;
-            p {
-                color: v.$blanco;
-            }
-        }
-
-        &:hover {
-            transform: scale(1.1);
-        }
-
-        p {
-            color: v.$negro;
-            margin: 0 0 calc( v.$separacion / 4) 0;
-        }
-        .precio-servicio {
-            color: v.$azul;
-            font-weight: v.$bold;
-            font-size: 3rem;
-            margin: 0;
-        }
-    }
-}
-
+.listado-servicios,
 .listado-productos {
     display: grid;
     gap: 2rem;
+
     @include m.tablet {
-        @include m.grid(2, 2rem);
+        grid-template-columns: repeat(2, 1fr); // Define 2 columnas en tabletas y mayores
     }
 
+    .servicio,
     .producto {
         background-color: v.$blanco;
         padding: 3rem;
         border-radius: 1rem;
-        transition-property: transform;
-        transition-duration: 300ms;
+        transition: transform 300ms ease, box-shadow 300ms ease; // Transición para transform y sombra
         text-align: center;
+        box-shadow: 0 2px 8px rgba(0, 0, 0, 0.1); // Sombra ligera para profundidad visual
+
+        &:hover {
+            transform: translateY(-5px); // Levanta ligeramente el elemento en lugar de escalar
+            box-shadow: 0 4px 12px rgba(0, 0, 0, 0.15); // Sombra más pronunciada en hover
+        }
 
         &.seleccionado {
             background-color: v.$azul;
-            p {
-                color: v.$blanco;
-            }
-        }
+            color: v.$blanco; // Cambio para aplicar el color blanco a todo el texto dentro
 
-        &:hover {
-            transform: scale(1.1);
+            p, .precio-servicio, .precio-producto {
+                color: inherit; // Hereda el color blanco del estado seleccionado
+            }
         }
 
         p {
             color: v.$negro;
-            margin: 0 0 calc( v.$separacion / 4) 0;
+            margin: 0 0 calc(v.$separacion / 4) 0;
         }
+        .precio-servicio,
         .precio-producto {
             color: v.$azul;
             font-weight: v.$bold;
